; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_multiply_int.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_multiply_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT_MIN = common dso_local global i32 0, align 4
@INT_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, double)* @multiply_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @multiply_int(i32* %0, i8* %1, double %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca double, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store double %2, double* %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to i32*
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %7, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = load double, double* %6, align 8
  %13 = call i32 @multiply_int64(i32* %11, i32* %7, double %12)
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @INT_MIN, align 4
  %16 = load i32, i32* @INT_MAX, align 4
  %17 = call i32 @MPCLAMP(i32 %14, i32 %15, i32 %16)
  %18 = load i8*, i8** %5, align 8
  %19 = bitcast i8* %18 to i32*
  store i32 %17, i32* %19, align 4
  ret void
}

declare dso_local i32 @multiply_int64(i32*, i32*, double) #1

declare dso_local i32 @MPCLAMP(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
